# vlc-android-indexing

./: README.md  README_Ubuntu2204.md  build.gradle
src/androidTest/java/com/example/vlc_source_code/: ExampleInstrumentedTest.kt
src/main/cpp/: CMakeLists.txt  vlc_source_code.cpp
src/test/java/com/example/vlc_source_code/: ExampleUnitTest.kt
